[package]
name = "indexer"
version = "0.1.0"
authors = ["kyledewy <dewhurst.kyle@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio-core = "*"
tokio = { version = "0.2", features = ["full"] }
curl = "*"
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"
diesel = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.9.0"